--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h2>Johnny Xiong</h2>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Projects</a>
+        </nav>
+    </header>
+    <section>
+        
+    </section>
+    <section></section>
+    <footer></footer>
 </body>
 </html>
