format second content tags and add comments for readability

--- a/index.html
+++ b/index.html
@@ -16,9 +16,39 @@
         </nav>
     </header>
     <section>
-        
+         <div><!--Background Image for first section-->
+             <div>
+                 <h1>Johnny Xiong</h1>
+                 <a href="#">My Projects</a>
+             </div>
+         </div>
     </section>
-    <section></section>
+    <section> <!--If 2 rows are required, may try to use another class to reference the second row-->
+        <div> <!--6 Image/small text class 1/6-->
+            <img src="" alt="Image Description Here">
+            <p></p>
+        </div>
+        <div> <!--6 Image/small text class 2/6-->
+            <img src="" alt="Image Description Here">
+            <p></p>
+        </div>
+        <div> <!--6 Image/small text class 3/6-->
+            <img src="" alt="Image Description Here">
+            <p></p>
+        </div>
+        <div> <!--6 Image/small text class 4/6-->
+            <img src="" alt="Image Description Here">
+            <p></p>
+        </div>
+        <div> <!--6 Image/small text class 5/6-->
+            <img src="" alt="Image Description Here">
+            <p></p>
+        </div>
+        <div> <!--6 Image/small text class 6/6-->
+            <img src="" alt="Image Description Here">
+            <p></p>
+        </div>
+    </section>
     <footer></footer>
 </body>
 </html>
