add links to anchor tags

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <h2>Johnny Xiong</h2>
         <nav>
             <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            <a href="#">Projects</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
         </nav>
     </header>
     <section>
          <div><!--Background Image for first section-->
              <div>
                  <h1>Johnny Xiong</h1>
-                 <a href="#">My Projects</a>
+                 <a href="projects.html">My Projects</a>
              </div>
          </div>
     </section>
@@ -49,6 +49,8 @@
             <p></p>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <a href="contact.html">Contact Me</a>
+    </footer>
 </body>
 </html>
