style header add image for first section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,13 +16,12 @@
             <a href="projects.html">Projects</a>
         </nav>
     </header>
-    <section>
-         <div><!--Background Image for first section-->
+    <section class="background-img">
+        <!--Background Image for first section-->
              <div>
                  <h1>Johnny Xiong</h1>
                  <a href="projects.html">My Projects</a>
              </div>
-         </div>
     </section>
     <section> <!--If 2 rows are required, may try to use another class to reference the second row-->
         <div> <!--6 Image/small text class 1/6-->
