add color to site

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style/index.css">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
+
 <body>
     <header>
         <h2>Johnny Xiong</h2>
@@ -18,41 +20,56 @@
     </header>
     <section class="background-img">
         <!--Background Image for first section-->
-                 <h1>Johnny Xiong</h1>
-                 <a href="projects.html">My Projects</a>
+        <h1>Johnny Xiong</h1>
+        <a href="projects.html">My Projects</a>
     </section>
-    <section class="flex_img_txt"> <!--If 2 rows are required, may try to use another class to reference the second row-->
+    <section class="flex_img_txt">
         <div class="row">
-        <div class="image_and_text"> <!--6 Image/small text class 1/6-->
-            <img src="https://i.picsum.photos/id/0/400/400.jpg?hmac=SU3aYlAKtJ-3OJNC46tIX5A7lSjJIUOphnwRH53POqE" alt="Picture of a Laptop workstation in a cafe">
-            <p>text here</p>
+            <!--First Row-->
+            <div>
+                <!--6 Image/small text  1/6-->
+                <img src="https://i.picsum.photos/id/0/400/400.jpg?hmac=SU3aYlAKtJ-3OJNC46tIX5A7lSjJIUOphnwRH53POqE"
+                    alt="Picture of a Laptop workstation in a cafe">
+                <p>I don't have any projects that I have done.</p>
+            </div>
+            <div>
+                <!--6 Image/small text  2/6-->
+                <img src="https://i.picsum.photos/id/96/400/400.jpg?hmac=Dk827JJjclA8rM8TKwQT8Udpb36cDGAIOVR0eZZRRbc"
+                    alt="Videogame controller flashing red">
+                <p>I like playing co-op videogames.</p>
+            </div>
+            <div>
+                <!--6 Image/small text  3/6-->
+                <img src="https://i.picsum.photos/id/380/400/400.jpg?hmac=ekEieOdt8yaxiFf1kcUl8-9pqqMB9mCmo4xaAhg7skc"
+                    alt="Canoe parked on the side of a lakeshore">
+                <p>I like canoeing but I haven't done it for a long time.</p>
+            </div>
         </div>
-        <div class="image_and_text"> <!--6 Image/small text class 2/6-->
-            <img src="https://i.picsum.photos/id/96/400/400.jpg?hmac=Dk827JJjclA8rM8TKwQT8Udpb36cDGAIOVR0eZZRRbc" alt="Videogame controller flashing red">
-            <p>text here</p>
-        </div>
-        <div class="image_and_text"> <!--6 Image/small text class 3/6-->
-            <img src="https://i.picsum.photos/id/380/400/400.jpg?hmac=ekEieOdt8yaxiFf1kcUl8-9pqqMB9mCmo4xaAhg7skc" alt="Canoe parked on the side of a lakeshore">
-            <p>text here</p>
-        </div>
-    </div>
         <div class="row">
-        <div class="image_and_text"> <!--6 Image/small text class 4/6-->
-            <img src="https://i.picsum.photos/id/507/400/400.jpg?hmac=Beg4NwezRCWyF8Pny4KnfFFFaJEoqHvzZVuYyv8-kts" alt="Overlook of a giant rocky rivervalley">
-            <p>text here</p>
-        </div>
-        <div class="image_and_text"> <!--6 Image/small text class 5/6-->
-            <img src="https://i.picsum.photos/id/184/400/400.jpg?hmac=V9CcOfhhTuMr8o2lia6_hSIeXt8hHJE9xWu7T0BrjRQ" alt="A desert as night falls onto it">
-            <p>text here</p>
-        </div>
-        <div class="image_and_text"> <!--6 Image/small text class 6/6-->
-            <img src="https://i.picsum.photos/id/724/400/400.jpg?hmac=25ic-KwnL_FMC9NsFegS1rqjBLUT_uPDCfU5BNVoiLM" alt="Aurora in the night sky above some trees">
-            <p>text here</p>
-        </div>
+            <!--Second Row-->
+            <div>
+                <!--6 Image/small text  4/6-->
+                <img src="https://i.picsum.photos/id/507/400/400.jpg?hmac=Beg4NwezRCWyF8Pny4KnfFFFaJEoqHvzZVuYyv8-kts"
+                    alt="Overlook of a giant rocky rivervalley">
+                <p>This is just a random photo I found online that <br>I thought looked nice.</p>
+            </div>
+            <div>
+                <!--6 Image/small text  5/6-->
+                <img src="https://i.picsum.photos/id/184/400/400.jpg?hmac=V9CcOfhhTuMr8o2lia6_hSIeXt8hHJE9xWu7T0BrjRQ"
+                    alt="A desert as night falls onto it">
+                <p>Another cool photo</p>
+            </div>
+            <div>
+                <!--6 Image/small text  6/6-->
+                <img src="https://i.picsum.photos/id/724/400/400.jpg?hmac=25ic-KwnL_FMC9NsFegS1rqjBLUT_uPDCfU5BNVoiLM"
+                    alt="Aurora in the night sky above some trees">
+                <p>I haven't seen the northern lights irl but it seems cool</p>
+            </div>
         </div>
     </section>
     <footer>
         <a href="contact.html">Contact Me</a>
     </footer>
 </body>
+
 </html>
