changed width for .row div class

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <!--6 Image/small text  4/6-->
                 <img src="https://i.picsum.photos/id/507/400/400.jpg?hmac=Beg4NwezRCWyF8Pny4KnfFFFaJEoqHvzZVuYyv8-kts"
                     alt="Overlook of a giant rocky rivervalley">
-                <p>This is just a random photo I found online that <br>I thought looked nice.</p>
+                <p>This is just a random photo I found online. </p>
             </div>
             <div>
                 <!--6 Image/small text  5/6-->
                 <img src="https://i.picsum.photos/id/184/400/400.jpg?hmac=V9CcOfhhTuMr8o2lia6_hSIeXt8hHJE9xWu7T0BrjRQ"
                     alt="A desert as night falls onto it">
-                <p>Another cool photo</p>
+                <p>Another cool photo dfasdfsfsdfsfdsfsfsfsfsfsf dfs<br> df sdf sd fsd f fsdf sf sd fsf s</p>
             </div>
             <div>
                 <!--6 Image/small text  6/6-->
