add title to background section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="projects.html">Projects</a>
         </nav>
     </header>
-    <section class="background-img">
+    <section class="background-img" title="mountainous-lakeview-background">
         <!--Background Image for first section-->
         <h1>Johnny Xiong</h1>
         <a href="projects.html">My Projects</a>
